--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Kelli Kuramoto</title>
+    <!-- <link rel="shortcut icon" href="images/moto-logo.png" type="image/x-icon"> -->
+    <link rel="icon" href="images/moto-logo.png" type="image/x-icon">
     
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css"/>
