--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="info">
             <h1 class="animate__animated animate__fadeInDown"></h1>
             <p id="description"></p>
-            <button onclick="loadCase()" id="casestudy" class="animate__animated animate__fadeInLeft">Case Study</button>
+            <button onclick="loadCase()" id="casestudy" class="animate__animated animate__fadeInLeft">View Case Study</button>
         </div>
 
         <div id="portfolio">
