Updated footer to include Work link

--- a/costar.html
+++ b/costar.html
@@ -176,6 +176,7 @@
   <div class="nav-right">
     <a class="nav-right-item" href="play.html">Play</a>
     <a class="nav-right-item" href="about.html">About</a>
+    <a class="nav-right-item" href="index.html#recent-work">Work</a>
   </div>
 </footer>
 
