--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <div class="nav-right">
     <a class="nav-right-item" href="play.html">Play</a>
     <a class="nav-right-item" href="about.html">About</a>
+    <a class="nav-right-item" href="index.html#recent-work">Work</a>
   </div>
 </footer>
 </html>
