--- a/costar.html
+++ b/costar.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Kelli Kuramoto</title>
-    <!-- <link rel="icon" href="images/moto-logo.png" type="image/x-icon"> -->
+    <link rel="icon" href="images/logo.png" type="image/x-icon">
     
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="styles.css">
