--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
           <p>Growing up, I never knew what I wanted to do but I knew I wanted to help people.
             <br>
             <br>
-            In highschool I started to drift torwards political science. My first internship was with the local congressman, working to pass a proposal on increased subsized housing for low income families. 
+            In highschool I started to drift towards political science. My first internship was with the local congressman, working to pass a proposal on increased subsidized housing for low income families. 
             <br>
             <br>
             However, once I got to college I fell in love with human centered design process and ux design. In my classes, I realized that there were so many ways that I could help people.
@@ -63,7 +63,7 @@
           <p>I thrive in a collaborative environment where multiple perspectives are take when tacking any problem. 
             <br>
             <br>
-            I am always seeking to help others through my design and have make efforts torwards more accessible design.
+            I am always seeking to help others through my design and have make efforts towards more accessible design.
           </p>
         </div>
         
