--- a/costar.html
+++ b/costar.html
@@ -89,7 +89,7 @@
           <h4 class="bold">Getting to know my users</h4>
           <h5>Meet with Internal CoStar employees to better understand the projected use of the product</h5>
           <p>
-            Due to time and other constraints I was unable to talk with customers directly. Instead, I talked to the next best people, CoStar employees who were clinet facing, such as Project Managers and Sales Associates. 
+            Due to time and other constraints I was unable to talk with customers directly. Instead, I talked to the next best people, CoStar employees who were client facing, such as Project Managers and Sales Associates. 
           </p>
           <ul>
           For each of my assigned pages, I scheduled meetings with employees who could answer my 3 basic questions:
@@ -104,13 +104,13 @@
           <h4 class="bold">Gathering my insights</h4>
           <h5>No customization or comparability function on Peers page</h5>
           <p>
-            After speaking with the previous project manager of the Peer page, I was able to gauage that the purpose of the Peers page was to allow users to compare thier property against similiar “peer” properties.          
+            After speaking with the previous project manager of the Peer page, I was able to gauge that the purpose of the Peers page was to allow users to compare their property against similar “peers” properties.          
           <ul>
             The biggest areas of improvement were:
             <li>Visual disconnect between Map and List View</li>
             <li>Limited comparison functionality</li>
           </ul>
-          I saw an oppourtunity to increase the user value of this page 10 fold because comparison is a huge advantage within the commerial real estate industry. My goal for this redesign was to increase the ability of the user to quickly customize their peer set, as well as compare their property among chosen metrics. 
+          I saw an opportunity to increase the user value of this page 10 fold because comparison is a huge advantage within the commercial real estate industry. My goal for this redesign was to increase the ability of the user to quickly customize their peer set, as well as compare their property among chosen metrics. 
           </p>      
         </div>
 
@@ -122,20 +122,20 @@
           <img src="images/costar-lofi.png" class="img-center" id="costar-lofi" alt="CoStar Case Study">
             I played around with multiple iterations: placing them side by side or right underneath each other to try and convey the connection to the user better.
           <img src="images/costar-midfi.png" class="img-center" alt="CoStar Case Study">    
-            As you can see, there was limited veritical space on the page due to width of the map and columns. After a design review with my manager and a group of senior designers, I went back to the drawing board and rethink how to strengthen this visual connection. 
+            As you can see, there was limited vertical space on the page due to width of the map and columns. After a design review with my manager and a group of senior designers, I went back to the drawing board and rethink how to strengthen this visual connection. 
           </p>     
         </div>
 
         <div class="casestudy-component">
-          <h4 class="bold">Switching to focus on comparibility</h4>
+          <h4 class="bold">Switching to focus on comparability</h4>
           <h5>Increasing value add by increasing user options</h5>
           <p>
-            Somewhat stuck, I decided to take a step back from trying to tackle customization and move torwards working on comparability. I desiged a Compare By drop down that would allow users to select a metric.           
+            Somewhat stuck, I decided to take a step back from trying to tackle customization and move towards working on comparability. I designed a Compare By drop down that would allow users to select a metric.           
           <img src="images/costar-comparability.png" class="img-center" alt="CoStar Case Study">
           During my second round of feedback, my managers pointed out that the Compare By functionality already existed within the product. However, it was instead referred to as the Sort button. 
           <br>
           <br>
-          Immediately I saw the beenfits of leverage exisiting funcitonality. While fleshing out this idea, inspiration struck!
+          Immediately I saw the benefits of leverage existing functionality. While fleshing out this idea, inspiration struck!
           </p>     
         </div>
 
@@ -143,7 +143,7 @@
           <h4 class="bold">Leveraging current functionality of product</h4>
           <h5>Adding toggle feature of list and map view</h5>
           <p>
-            Instead of visually trying to create a new connection between the table and map view, I could leverage an existing feature of the product to achieve this goal. On the properties home page, there is a toggle feature that allows users to swtich between map and list view. This feature would remove all the obstacles in my previous designs, namely too little vertical visual space.
+            Instead of visually trying to create a new connection between the table and map view, I could leverage an existing feature of the product to achieve this goal. On the properties home page, there is a toggle feature that allows users to switch between map and list view. This feature would remove all the obstacles in my previous designs, namely too little vertical visual space.
           <img src="images/costar-toggle.png" class="img-center" alt="CoStar Case Study">
           </p>     
         </div>
@@ -156,10 +156,10 @@
 
         <div class="casestudy-component">
           <h4 class="bold">What I learned</h4>
-          <p>With this being one of my first projects working in industry, I can definitely say that I learned a lot, specifcally as a designer working for a buisness. However, I want to highlight that I had alot of fun applying what I have learned in the classroom.
+          <p>With this being one of my first projects working in industry, I can definitely say that I learned a lot, specifically as a designer working for a business. However, I want to highlight that I had a lot of fun applying what I have learned in the classroom.
           </p>
           <ol>
-            <li>Someone always knows more than you, learn from them. As someone who had very little knowledge about commerical real estate before this internship, I was very overwhelmed when tasked with this project. But, as my manager quickly pointed out, there will always be someone who knows more than you and you should always ask them what they know. This drove home the point of user centered research and it’s neccessity for designers.</li>
+            <li>Someone always knows more than you, learn from them. As someone who had very little knowledge about commercial real estate before this internship, I was very overwhelmed when tasked with this project. But, as my manager quickly pointed out, there will always be someone who knows more than you and you should always ask them what they know. This drove home the point of user centered research and it’s necessity for designers.</li>
             <li>Older products have “gold”, you just have to dig. While trying to come up with new ways to increase value add of the Peers page, I tried to invent new ways for users to interact with this page. However, I found that leveraging the current features and other aspects of the product resulted in increased benefits due to customers previous mental models and development’s archive of features to build.</li>
           </ol> 
         </div>
