--- a/dailydetour.html
+++ b/dailydetour.html
@@ -83,16 +83,16 @@
           </div>
   
           <div>
-            <h5>Public forum allows for verification of activites</h5>
+            <h5>Public forum allows for verification of activities</h5>
             <ul>
-              <li>Travelers can rely on activites, housing,  transportation with worry</li>
+              <li>Travelers can rely on activities, housing,  transportation with worry</li>
               <li>Reduces need to search third party apps such as TripAdvisor or google</li>
               <li>Easier for users to make decisions if options are presented clearly</li>
             </ul>
           </div>
 
           <div>
-            <h5>Clear trip details increases public transporation use</h5>
+            <h5>Clear trip details increases public transportation use</h5>
             <ul>
               <li>Proximity to public transportation increase usage</li>
               <li>Clear directions reduces the need for other third party apps such as Google Maps</li>
@@ -135,12 +135,12 @@
 
         <div class="casestudy-component">
           <h4 class="bold">Conducting a contextual inquiry</h4>
-          <h5>Talking to users verified assumptions and created oppourtunities</h5>
+          <h5>Talking to users verified assumptions and created opportunities</h5>
           <p>
-            After narrowing the problem space, we dove deeper with a contexual reserach method: Directed Storytelling. 
+            After narrowing the problem space, we dove deeper with a contextual research method: Directed Storytelling. 
             <br>
             <br>
-            In order to analyze our findings, we each created interpertation notes and use those as the foundation for our affinity diagram. Our affinity diagram helped us zoom out and see larger themes present in our problem space. We decided to model our findings in the form of an Empathy map and Customer Journey map.          
+            In order to analyze our findings, we each created interpretation notes and use those as the foundation for our affinity diagram. Our affinity diagram helped us zoom out and see larger themes present in our problem space. We decided to model our findings in the form of an Empathy map and Customer Journey map.          
             <img src="images/dailydetour-models.png" class="img-center" alt="CoStar Case Study">
           </p>     
         </div>
@@ -155,16 +155,16 @@
               <li>When people realize public transportation stops align with their itinerary, they are more likely to use public transit</li>
               <li>People who stay near public transportation stops can leverage the transportation network to plan their trip </li>
               <li>If people perceive public transportation as the best mode, they will feel more independent while using it</li>
-              <li>In cities where public transportation apps are comparable to private ridesharing apps, people feel more confident in the transportation and are more willing to use it</li>
+              <li>In cities where public transportation apps are comparable to private ride sharing apps, people feel more confident in the transportation and are more willing to use it</li>
             </ul>
           </p>     
         </div>
 
         <div class="casestudy-component">
           <h4 class="bold">Investigating user needs</h4>
-          <h5>Storyboarding allowed us to understand how to address user wants and needs</h5>
+          <h5>Story boarding allowed us to understand how to address user wants and needs</h5>
           <p>
-            We translated our insights from our contexual inquiry into user wants and needs. These would become the foundations of our storyboards. 
+            We translated our insights from our contextual inquiry into user wants and needs. These would become the foundations of our storyboards. 
             <ul>
               User Needs
               <li>Need technology to cluster activities based off public</li>
@@ -181,12 +181,12 @@
           <p>
             After a couple rounds of speed dating with our storyboards, we found that:
           <ul>
-              <li>Online community forums serve as a trustworthy sources of activites</li>
+              <li>Online community forums serve as a trustworthy sources of activities</li>
               <li>Detours were welcomed if users did not have a reservation or time constraints</li>
-              <li>Proximity and cost were large factors when deciding on transporation</li>
-              <li>Detailed information about trip is neccessary when using public transporation</li>
+              <li>Proximity and cost were large factors when deciding on transportation</li>
+              <li>Detailed information about trip is necessary when using public transportation</li>
             </ul>
-            Once we had a clear idea of the user needs and how to address them, I started to design a mobile application that highlighted features such as a community forum, itinerary with detours, as well as detailed information about transporation routes.
+            Once we had a clear idea of the user needs and how to address them, I started to design a mobile application that highlighted features such as a community forum, itinerary with detours, as well as detailed information about transportation routes.
           </p>     
         </div>
 
@@ -194,16 +194,6 @@
           <h4 class="bold">Final design</h4>
           <img src="images/dailydetour-finaldesign.png" class="img-center" alt="CoStar Case Study">
         </div>
-
-        <!-- <div class="casestudy-component">
-          <h4 class="bold">What I learned</h4>
-          <p>With this being one of my first projects working in industry, I can definitely say that I learned a lot, specifcally as a designer working for a buisness. However, I want to highlight that I had alot of fun applying what I have learned in the classroom.
-          </p>
-          <ol>
-            <li>Someone always knows more than you, learn from them. As someone who had very little knowledge about commerical real estate before this internship, I was very overwhelmed when tasked with this project. But, as my manager quickly pointed out, there will always be someone who knows more than you and you should always ask them what they know. This drove home the point of user centered research and it’s neccessity for designers.</li>
-            <li>Older products have “gold”, you just have to dig. While trying to come up with new ways to increase value add of the Peers page, I tried to invent new ways for users to interact with this page. However, I found that leveraging the current features and other aspects of the product resulted in increased benefits due to customers previous mental models and development’s archive of features to build.</li>
-          </ol> 
-        </div> -->
       </div>  
     </div>
 </body>
