--- a/play.html
+++ b/play.html
@@ -38,7 +38,7 @@
           <h3 class="bold">Springboard diving</h3>
           <div class= "grid-container-play">
             <div>
-              I am on Carnegie Mellon’s varisty Swimming and Diving team. I currently hold the school records for both 1M and 3M springboard diving. 
+              I am on Carnegie Mellon’s varsity Swimming and Diving team. I currently hold the school records for both 1M and 3M springboard diving. 
               <br>
               <br>
               My favorite thing about diving is the teammates and bonds that I have forged during my time at CMU.
@@ -76,7 +76,7 @@
               Along with UX design, I also enjoy software development specifically Front end, as well as playing around with some databases. 
               <br>
               <br>
-              I believe my interdisplinary studies at Carnegie Mellon have equipped me to become a better designer as a whole.           
+              I believe my interdisciplinary studies at Carnegie Mellon have equipped me to become a better designer as a whole.           
             </div>
             <div>
               <img class="img-photo" src="images/swe1.png" alt="Xpresso website" width="300" height="200" onclick="window.open('https://kellikuramoto.github.io/pui-22/homework_6b/', '_blank');">
