--- a/sellinglater.html
+++ b/sellinglater.html
@@ -36,10 +36,10 @@
         <div class="casestudy-component" id="sellinglater-background">
           <div class="component-left">
             <h4 class="bold">What did I do?</h4>
-            <p>Lead a team of designers and collaborated with a project manager to design a web application for Seling Later.
+            <p>Lead a team of designers and collaborated with a project manager to design a web application for Selling Later.
             <br>
             <br>
-            This project was overseen by re:Bloom, a non profit organization that teachs small businesses owners and non-profit founders how to incorporate and use technology to expand their reach.
+            This project was overseen by re:Bloom, a non profit organization that teaches small businesses owners and non-profit founders how to incorporate and use technology to expand their reach.
             </p>
           </div>
           <div class="component-right">
@@ -58,7 +58,7 @@
 
       <div class="casestudy-component">
         <h4 class="bold">What was the problem?</h4>
-        <h5>Unituitive navigation inhibited users from utilizing platform easily and accessing key features
+        <h5>Unintuitive navigation inhibited users from utilizing platform easily and accessing key features
         <br>
         <br>
         Current platform does not allow Owner to make updates or changes
@@ -103,7 +103,7 @@
           By clearly displaying the information in a site map, we were able to start grouping the items and brainstorm labels for her new navigation bar. 
           <br>
           <br>
-          Ms. Glich also had a list of new features that she wanted to integrate into the application. We incorporated these features high within the hierarchy of the menu to allow easy acess.
+          Ms. Glich also had a list of new features that she wanted to integrate into the application. We incorporated these features high within the hierarchy of the menu to allow easy access.
         </p>
         <img src="images/sellinglater-lofi.png" class="img-center" alt="Selling Later Case Study">
       </div>
@@ -128,23 +128,13 @@
           <img src="images/sellinglater-nav.png" class="img-center" alt="Selling Later Case Study">
           For our second round of user testing, we designed a hi-fi prototype with full interactivity to get a better understanding of the mental models associated with our users when full content and functionality were present. 
         </p>
-        <p>100% of user testers would reccomend using the redesigned version of Selling Later</p>
+        <p>100% of user testers would recommend using the redesigned version of Selling Later</p>
       </div>
 
       <div class="casestudy-component">
         <h4 class="bold">Final design</h4>
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1100" height="650" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FJhM7Bicn510vM9AScD5vZL%2FSelling-Later-Hifi-Prototype%3Fpage-id%3D0%253A1%26node-id%3D41%253A261%26viewport%3D174%252C51%252C0.05%26scaling%3Dscale-down-width%26starting-point-node-id%3D41%253A261" allowfullscreen></iframe>
       </div>
-
-      <!-- <div class="casestudy-component">
-        <h4 class="bold">What I learned</h4>
-        <p>With this being one of my first projects working in industry, I can definitely say that I learned a lot, specifcally as a designer working for a buisness. However, I want to highlight that I had alot of fun applying what I have learned in the classroom.
-        </p>
-        <ol>
-          <li>Someone always knows more than you, learn from them. As someone who had very little knowledge about commerical real estate before this internship, I was very overwhelmed when tasked with this project. But, as my manager quickly pointed out, there will always be someone who knows more than you and you should always ask them what they know. This drove home the point of user centered research and it’s neccessity for designers.</li>
-          <li>Older products have “gold”, you just have to dig. While trying to come up with new ways to increase value add of the Peers page, I tried to invent new ways for users to interact with this page. However, I found that leveraging the current features and other aspects of the product resulted in increased benefits due to customers previous mental models and development’s archive of features to build.</li>
-        </ol> 
-      </div> -->
 
     </div>
 </body>
