--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </nav>
 
   <div class="content"> 
-    <img src="images/cover.png" id="thumbnail-cover" alt="CoStar Case Study" width="900" height="585">
+    <img src="images/thumbnail-cover.png" class="img-center" id="thumbnail-cover" alt="CoStar Case Study">
   </div>
 
   <div id="recent-work">
