Updated UI of home page

--- a/dailydetour.html
+++ b/dailydetour.html
@@ -29,18 +29,19 @@
 
     <div class="content"> 
       <div class="thumbnail-casestudy">
+        <h2>MODERNIZING the COSTAR PRODUCT</h2>
         <img class="animate__animated animate__slideInLeft animate__slower" src="images/dailydetour-thumbnail.png" alt="Daily Detour Case Study">
       </div>
 
       <div class="casestudy-content">
         <div class="casestudy-component" id="dailydetour-background">
           <div class="component-left">
-            <h4 class="bold">What did I do?</h4>
+            <h4>Overview</h4>
             <p>Lead a team of researchers to conduct a multitude of user centered research methods, leveraging the insights to help people make informed decisions while trip planning. 
             </p>
           </div>
           <div class="component-right">
-            <h4 class="bold">Who? When?</h4>
+            <h4>background</h4>
             <p>Team
               <ul>
                 <li>Amelia Austin, Team member</li>
