--- a/costar.html
+++ b/costar.html
@@ -29,18 +29,19 @@
 
     <div class="content"> 
       <div class="thumbnail-casestudy">
+        <h2>MODERNIZING the <span>COSTAR PRODUCT</span></h2>
         <img class="animate__animated animate__fadeInLeft animate__slower" src="images/costar-thumbnail.png" alt="CoStar Case Study">
       </div>
 
       <div class="casestudy-content">
         <div class="casestudy-component" id="costar-background">
           <div class="component-left">
-            <h4 class="bold">What did I do?</h4>
+            <h4>Overview</h4>
             <p>During Summer 2022, I collaborated with 2 other UX design interns to align the CoStar Properties product with the new design system. I also redesign the experience of specific tabs within the product to better address user needs. 
             </p>
           </div>
           <div class="component-right">
-            <h4 class="bold">Who? When?</h4>
+            <h4>Background</h4>
             <p>Team
               <ul>
                 <li>Anna Wei, UX Design Intern</li>
@@ -52,15 +53,15 @@
         </div>
 
         <div class="casestudy-component">
-          <h4 class="bold">What was the problem?</h4>
-          <h5>Outdated UI and UX restricted the users from using the product in an efficient manner</h5>
+          <h4>The problem</h4>
+          <p class="header">Outdated UI and UX restricted the users from using the product in an efficient manner</p>
         </div>
 
         <div class="casestudy-component">
-          <h4 class="bold">What was my solution?</h4>
+          <h4>The solution</h4>
           <div id= "grid-container">
           <div>
-            <h5>Increased typeface + line spacing allowed for easier readability</h5>
+            <p class="header">Increased typeface + line spacing allowed for easier readability</p>
             <ul>
               <li>Conforms to AAA Accessibility Standards</li>
               <li>Easier skimmability allows customers to access information quicker</li>
@@ -77,7 +78,7 @@
           </div>
   
           <div>
-            <h5>Leveraged current features within the product to reimagine functionality of the page</h5>
+            <p class="header">Leveraged current features within the product to reimagine functionality of the page</p>
             <ul>
               <li>Allows easy customization of Peers set</li>
               <li>Compare property against peers along multiple KPIs</li>
@@ -86,8 +87,8 @@
         </div>
 
         <div class="casestudy-component">
-          <h4 class="bold">Getting to know my users</h4>
-          <h5>Meet with Internal CoStar employees to better understand the projected use of the product</h5>
+          <h4>Getting to know my users</h4>
+          <p class="header">Meet with Internal CoStar employees to better understand the projected use of the product</p>
           <p>
             Due to time and other constraints I was unable to talk with customers directly. Instead, I talked to the next best people, CoStar employees who were client facing, such as Project Managers and Sales Associates. 
           </p>
@@ -101,8 +102,8 @@
         </div>
 
         <div class="casestudy-component">
-          <h4 class="bold">Gathering my insights</h4>
-          <h5>No customization or comparability function on Peers page</h5>
+          <h4>Gathering my insights</h4>
+          <p class="header">No customization or comparability function on Peers page</p>
           <p>
             After speaking with the previous project manager of the Peer page, I was able to gauge that the purpose of the Peers page was to allow users to compare their property against similar “peers” properties.          
           <ul>
@@ -115,8 +116,8 @@
         </div>
 
         <div class="casestudy-component">
-          <h4 class="bold">Multiple design directions</h4>
-          <h5>Utilizing the Proximity Principle to increase feedback</h5>
+          <h4>Multiple design directions</h4>
+          <p class="header">Utilizing the Proximity Principle to increase feedback</p>
           <p>
             I noticed right away that the table and map view were extremely far apart which made it hard for users to connect them mentally, and as a response made it impossible to visualize their changes to the peer set.
           <img src="images/costar-lofi.png" class="img-center" id="costar-lofi" alt="CoStar Case Study">
@@ -127,8 +128,8 @@
         </div>
 
         <div class="casestudy-component">
-          <h4 class="bold">Switching to focus on comparability</h4>
-          <h5>Increasing value add by increasing user options</h5>
+          <h4>Switching to focus on comparability</h4>
+          <p class="header">Increasing value add by increasing user options</p>
           <p>
             Somewhat stuck, I decided to take a step back from trying to tackle customization and move towards working on comparability. I designed a Compare By drop down that would allow users to select a metric.           
           <img src="images/costar-comparability.png" class="img-center" alt="CoStar Case Study">
@@ -140,8 +141,8 @@
         </div>
 
         <div class="casestudy-component">
-          <h4 class="bold">Leveraging current functionality of product</h4>
-          <h5>Adding toggle feature of list and map view</h5>
+          <h4>Leveraging current functionality of product</h4>
+          <p class="header">Adding toggle feature of list and map view</p>
           <p>
             Instead of visually trying to create a new connection between the table and map view, I could leverage an existing feature of the product to achieve this goal. On the properties home page, there is a toggle feature that allows users to switch between map and list view. This feature would remove all the obstacles in my previous designs, namely too little vertical visual space.
           <img src="images/costar-toggle.png" class="img-center" alt="CoStar Case Study">
@@ -149,13 +150,13 @@
         </div>
 
         <div class="casestudy-component">
-          <h4 class="bold">Final design</h4>
+          <h4>Final design</h4>
           <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1100" height="650" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FfD6MpCcWKO9F3hPzyURJbV%2FCoStar-Modernizing-Tabs%3Fpage-id%3D0%253A1%26node-id%3D0%253A3986%26viewport%3D488%252C341%252C0.15%26scaling%3Dscale-down-width%26starting-point-node-id%3D0%253A2768" allowfullscreen>
           </iframe>
         </div>
 
         <div class="casestudy-component">
-          <h4 class="bold">What I learned</h4>
+          <h4>What I learned</h4>
           <p>With this being one of my first projects working in industry, I can definitely say that I learned a lot, specifically as a designer working for a business. However, I want to highlight that I had a lot of fun applying what I have learned in the classroom.
           </p>
           <ol>
