Created Pittsburgh Zoo Case Study

--- a/costar.html
+++ b/costar.html
@@ -29,7 +29,7 @@
 
     <div class="content"> 
       <div class="thumbnail-casestudy">
-        <h2>MODERNIZING the <span>COSTAR PRODUCT</span></h2>
+        <h2>MODERNIZING the <span id="costar-underline">COSTAR PRODUCT</span></h2>
         <img class="animate__animated animate__fadeInLeft animate__slower" src="images/costar-thumbnail.png" alt="CoStar Case Study">
       </div>
 
@@ -37,7 +37,8 @@
         <div class="casestudy-component" id="costar-background">
           <div class="component-left">
             <h4>Overview</h4>
-            <p>During Summer 2022, I collaborated with 2 other UX design interns to align the CoStar Properties product with the new design system. I also redesign the experience of specific tabs within the product to better address user needs. 
+            <p>
+              During Summer 2022, I had the opportunity to collaborate with two fellow UX design interns on a project aimed at aligning the CoStar Properties product with the newly introduced Cosmos design system. I undertook the task of redesigning specific tabs within the product to enhance their ability to address user needs effectively.
             </p>
           </div>
           <div class="component-right">
