--- a/index.html
+++ b/index.html
@@ -40,22 +40,7 @@
   <div id="recent-work">
     <h2>* RECENT WORK</h2>
     <div class="grid-container">
-    <a href="costar.html">
-    <div class="grid-item">
-      <div id="costar" class="thumbnail-container">
-        <div class="thumbnail back">
-          <h4>Costar Group</h4>
-          <p>Modernized the CoStar Product</p>
-          <p>* UX Design <br> *Jun 2022 - Aug 2022</p>
-        </div>
-        <div class="thumbnail front">
-          <img class="thumbnail-large" src="images/costar-thumbnail-sm.png" alt="CoStar Case Study">
-        </div>
-      </div>
-    </div>
-  </a>
-    
-    <a href="about.html">
+    <a href="zoo.html">
     <div class="grid-item">
         <div id="zoo" class="thumbnail-container">
       <div class="thumbnail back">
@@ -82,6 +67,21 @@
         </div>
       </div>
     </div>
+
+    <a href="costar.html">
+      <div class="grid-item">
+        <div id="costar" class="thumbnail-container">
+          <div class="thumbnail back">
+            <h4>Costar Group</h4>
+            <p>Modernized the CoStar Product</p>
+            <p>* UX Design <br> *Jun 2022 - Aug 2022</p>
+          </div>
+          <div class="thumbnail front">
+            <img class="thumbnail-large" src="images/costar-thumbnail-sm.png" alt="CoStar Case Study">
+          </div>
+        </div>
+      </div>
+      </a>
 
     <div class="grid-item">
         <div id="cafe23" class="thumbnail-container">
