Created case study for cui and cafe23

--- a/costar.html
+++ b/costar.html
@@ -30,7 +30,7 @@
     <div class="content"> 
       <div class="thumbnail-casestudy">
         <h2>MODERNIZING the <span id="costar-underline">COSTAR PRODUCT</span></h2>
-        <img class="animate__animated animate__fadeInLeft animate__slower" src="images/costar-thumbnail.png" alt="CoStar Case Study">
+        <img class="thumbnail-img animate__animated animate__fadeInLeft animate__slower" src="images/costar-thumbnail.png" alt="CoStar Case Study">
       </div>
 
       <div class="casestudy-content">
