--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     </div>
     </a>
 
+    <a href="cui.html">
     <div class="grid-item">
       <div id="archie" class="thumbnail-container">
         <div class="thumbnail back">
@@ -67,34 +68,37 @@
         </div>
       </div>
     </div>
+    </a>
 
     <a href="costar.html">
-      <div class="grid-item">
-        <div id="costar" class="thumbnail-container">
-          <div class="thumbnail back">
-            <h4>Costar Group</h4>
-            <p>Modernized the CoStar Product</p>
-            <p>* UX Design <br> *Jun 2022 - Aug 2022</p>
-          </div>
-          <div class="thumbnail front">
-            <img class="thumbnail-large" src="images/costar-thumbnail-sm.png" alt="CoStar Case Study">
-          </div>
+    <div class="grid-item">
+      <div id="costar" class="thumbnail-container">
+        <div class="thumbnail back">
+          <h4>Costar Group</h4>
+          <p>Modernized the CoStar Product</p>
+          <p>* UX Design <br> *Jun 2022 - Aug 2022</p>
+        </div>
+        <div class="thumbnail front">
+          <img class="thumbnail-large" src="images/costar-thumbnail-sm.png" alt="CoStar Case Study">
         </div>
       </div>
-      </a>
+    </div>
+    </a>
 
+    <a href="cafe23.html">
     <div class="grid-item">
-        <div id="cafe23" class="thumbnail-container">
-      <div class="thumbnail back">
-        <h4>Cafe23</h4>
-        <p>Web application for coffee shop</p>
-        <p>* Web Development <br> *Aug 2022 - Mar 2023</p>
-      </div>
-      <div class="thumbnail front">
-        <img class="thumbnail-large" src="images/costar-thumbnail-sm.png" alt="CoStar Case Study">
-      </div>
+      <div id="cafe23" class="thumbnail-container">
+        <div class="thumbnail back">
+          <h4>Cafe23</h4>
+          <p>Web application for coffee shop</p>
+          <p>* Web Development <br> *Aug 2022 - Mar 2023</p>
+        </div>
+        <div class="thumbnail front">
+          <img class="thumbnail-large" src="images/costar-thumbnail-sm.png" alt="CoStar Case Study">
+        </div>
     </div>
     </div>
+    </a>
   </div>
 </div>
 
