--- a/zoo.html
+++ b/zoo.html
@@ -30,7 +30,7 @@
     <div class="content"> 
       <div class="thumbnail-casestudy">
         <h2>DATA DASHBOARD for the <span id="zoo-underline">PITTSBURGH ZOO</span></h2>
-        <img class="animate__animated animate__fadeInLeft animate__slower" src="images/zoo-thumbnail.png" alt="Pittsburgh Zoo Case Study">
+        <img class="thumbnail-img animate__animated animate__fadeInLeft animate__slower" src="images/zoo-thumbnail.png" alt="Pittsburgh Zoo Case Study">
       </div>
 
       <div class="casestudy-content">
