Fixed spacing and styles on case studies

--- a/cafe23.html
+++ b/cafe23.html
@@ -29,7 +29,9 @@
 
     <div class="content"> 
       <div class="thumbnail-casestudy">
-        <h2><span id="cafe23-underline">WEB APPLICATION</span> for CAFE23</h2>
+        <div class="title">
+          <h2><span id="cafe23-underline">WEB APPLICATION</span> for CAFE23</h2>
+        </div>
         <img class="thumbnail-img animate__animated animate__fadeInLeft animate__slower" src="images/cafe23-thumbnail.png" alt="Cafe23 Case Study">
       </div>
 
