--- a/cui.html
+++ b/cui.html
@@ -29,7 +29,9 @@
 
     <div class="content"> 
       <div class="thumbnail-casestudy">
-        <h2>ARCHIE: <span id="cui-underline">CONVERSATIONAL AGENT</span> for HOTELS</h2>
+        <div class="title">
+          <h2>ARCHIE: <span id="cui-underline">CONVERSATIONAL AGENT</span> for HOTELS</h2>
+        </div>
         <img class="thumbnail-img animate__animated animate__fadeInLeft animate__slower" src="images/cui-thumbnail.png" alt="CoStar Case Study">
       </div>
 
