--- a/costar.html
+++ b/costar.html
@@ -29,7 +29,9 @@
 
     <div class="content"> 
       <div class="thumbnail-casestudy">
-        <h2>MODERNIZING the <span id="costar-underline">COSTAR PRODUCT</span></h2>
+        <div class="title">
+          <h2>MODERNIZING the <span id="costar-underline">COSTAR PRODUCT</span></h2>
+        </div>
         <img class="thumbnail-img animate__animated animate__fadeInLeft animate__slower" src="images/costar-thumbnail.png" alt="CoStar Case Study">
       </div>
 
