--- a/zoo.html
+++ b/zoo.html
@@ -29,7 +29,9 @@
 
     <div class="content"> 
       <div class="thumbnail-casestudy">
-        <h2>DATA DASHBOARD for the <span id="zoo-underline">PITTSBURGH ZOO</span></h2>
+        <div class="title">
+          <h2>DATA DASHBOARD for the <span id="zoo-underline">PITTSBURGH ZOO</span></h2>
+        </div>
         <img class="thumbnail-img animate__animated animate__fadeInLeft animate__slower" src="images/zoo-thumbnail.png" alt="Pittsburgh Zoo Case Study">
       </div>
 
